--- a/pages/styles/stylesComponents/CitiesBest.css
+++ b/pages/styles/stylesComponents/CitiesBest.css
@@ -78,3 +78,436 @@
     width: 100%;
     height: 100%;
 }
+
+
+@media (max-width: 1500px) {
+    .CitiesBestHome {
+        width: 100%;
+        height: 2800px;
+    }
+    
+    .CitiesBestHome-Container {
+        width: 100%;
+        height: 2750px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .CitiesBestHome-Container-Div-h3 {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .CitiesBestHome-Container-h3 {
+        text-align: center;
+    }
+    
+    .CitiesBestHome-Container-Div-ul {
+        width: 95%;
+        height: 2650px;
+    }
+    
+    .CitiesBestHome-Container-ul {
+        width: 100%;
+        height: 2600px;
+        display: flex;
+        flex-direction: column; /* Change flex direction to column */
+        list-style: none;
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+    }
+    
+    .CitiesBestHome-Container-ul-li {
+        width: 100%; /* Set width to 100% to make li elements stack vertically */
+        height: 280px; /* Keep the height as defined */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px; /* Add some space between the items */
+    }    
+    
+    .CitiesBestHome-Container-ul-li-Card {
+        width: 600px;
+        height: 500px;
+        position: relative;
+        z-index: -1;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-img {
+        width: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-Div-span {
+        width: 600px;
+        height: 60px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(255, 255, 255, 0.7); 
+        bottom: 0;
+        margin-bottom: 10px;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-span {
+        font-size: 12px;
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 900px) {
+    .CitiesBestHome {
+        width: 100%;
+        height: 2800px;
+    }
+    
+    .CitiesBestHome-Container {
+        width: 100%;
+        height: 2750px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .CitiesBestHome-Container-Div-h3 {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .CitiesBestHome-Container-h3 {
+        text-align: center;
+    }
+    
+    .CitiesBestHome-Container-Div-ul {
+        width: 95%;
+        height: 2650px;
+    }
+    
+    .CitiesBestHome-Container-ul {
+        width: 100%;
+        height: 2600px;
+        display: flex;
+        flex-direction: column; /* Change flex direction to column */
+        list-style: none;
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+    }
+    
+    .CitiesBestHome-Container-ul-li {
+        width: 100%; /* Set width to 100% to make li elements stack vertically */
+        height: 280px; /* Keep the height as defined */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px; /* Add some space between the items */
+    }    
+    
+    .CitiesBestHome-Container-ul-li-Card {
+        width: 400px;
+        height: 250px;
+        position: relative;
+        z-index: -1;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-img {
+        width: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-Div-span {
+        width: 400px;
+        height: 60px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(255, 255, 255, 0.7); 
+        bottom: 0;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-span {
+        font-size: 12px;
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 600px){
+    .CitiesBestHome {
+        width: 100%;
+        height: 3000px;
+    }
+    
+    .CitiesBestHome-Container {
+        width: 100%;
+        height: 2950px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .CitiesBestHome-Container-Div-h3 {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .CitiesBestHome-Container-h3 {
+        text-align: center;
+    }
+    
+    .CitiesBestHome-Container-Div-ul {
+        width: 95%;
+        height: 2850px;
+    }
+    
+    .CitiesBestHome-Container-ul {
+        width: 100%;
+        height: 2800px;
+        display: flex;
+        flex-direction: column; /* Change flex direction to column */
+        list-style: none;
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+    }
+    
+    .CitiesBestHome-Container-ul-li {
+        width: 100%; /* Set width to 100% to make li elements stack vertically */
+        height: 280px; /* Keep the height as defined */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px; /* Add some space between the items */
+    }    
+    
+    .CitiesBestHome-Container-ul-li-Card {
+        width: 350px;
+        height: 200px;
+        position: relative;
+        z-index: -1;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-img {
+        width: 100%;
+        height: 200px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-Div-span {
+        width: 350px;
+        height: 60px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(255, 255, 255, 0.7); 
+        bottom: 0;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-span {
+        font-size: 12px;
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 500px){
+    .CitiesBestHome {
+        width: 100%;
+        height: 3000px;
+    }
+    
+    .CitiesBestHome-Container {
+        width: 100%;
+        height: 2950px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .CitiesBestHome-Container-Div-h3 {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .CitiesBestHome-Container-h3 {
+        text-align: center;
+    }
+    
+    .CitiesBestHome-Container-Div-ul {
+        width: 95%;
+        height: 2850px;
+    }
+    
+    .CitiesBestHome-Container-ul {
+        width: 100%;
+        height: 2800px;
+        display: flex;
+        flex-direction: column; /* Change flex direction to column */
+        list-style: none;
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+    }
+    
+    .CitiesBestHome-Container-ul-li {
+        width: 100%; /* Set width to 100% to make li elements stack vertically */
+        height: 280px; /* Keep the height as defined */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px; /* Add some space between the items */
+    }    
+    
+    .CitiesBestHome-Container-ul-li-Card {
+        width: 350px;
+        height: 200px;
+        position: relative;
+        z-index: -1;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-img {
+        width: 100%;
+        height: 200px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-Div-span {
+        width: 350px;
+        height: 50px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(255, 255, 255, 0.7); 
+        bottom: 0;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-span {
+        font-size: 10px;
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+
+}
+
+@media (max-width: 400px){
+    .CitiesBestHome {
+        width: 100%;
+        height: 3000px;
+    }
+    
+    .CitiesBestHome-Container {
+        width: 100%;
+        height: 2950px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .CitiesBestHome-Container-Div-h3 {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .CitiesBestHome-Container-h3 {
+        text-align: center;
+    }
+    
+    .CitiesBestHome-Container-Div-ul {
+        width: 95%;
+        height: 2850px;
+    }
+    
+    .CitiesBestHome-Container-ul {
+        width: 100%;
+        height: 2800px;
+        display: flex;
+        flex-direction: column; /* Change flex direction to column */
+        list-style: none;
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+    }
+    
+    .CitiesBestHome-Container-ul-li {
+        width: 100%; /* Set width to 100% to make li elements stack vertically */
+        height: 280px; /* Keep the height as defined */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px; /* Add some space between the items */
+    }    
+    
+    .CitiesBestHome-Container-ul-li-Card {
+        width: 250px;
+        height: 150px;
+        position: relative;
+        z-index: -1;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-img {
+        width: 100%;
+        height: 150px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-Div-span {
+        width: 250px;
+        height: 40px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(255, 255, 255, 0.7); 
+        bottom: 0;
+    }
+    
+    .CitiesBestHome-Container-ul-li-Card-span {
+        font-size: 8px;
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+}
