--- a/pages/styles/stylesComponents/HotelSelectionHome.css
+++ b/pages/styles/stylesComponents/HotelSelectionHome.css
@@ -1,12 +1,11 @@
 .HotelSelectionHome {
     width: 100%;
-    height: 800px;
-    margin-bottom: 250px;
+    height: 950px;
 }
 
 .HotelSelectionHome-Container {
     width: 100%;
-    height: 790px;
+    height: 900px;
 }
 
 .HotelSelectionHome-Container-Div-h1 {
@@ -23,12 +22,12 @@
 
 .HotelSelectionHome-Container-Body {
     width: 100%;
-    height: 695px;
+    height: 6px;
 }
 
 .HotelSelectionHome-Container-Body-Cards {
     width: 100%;
-    height: 690px;
+    height: 800px;
     display: block;
     justify-content: center;
     align-items: center;
@@ -136,4 +135,395 @@
 .HotelSelectionHome-Container-Body-Cards-2-Subject-span {
     width: 100%;
     text-align: center;
+}
+
+@media (max-width: 1700px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 55%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 55%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 22%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 55%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 55%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 22%;
+    }
+    
+}
+
+@media (max-width: 1600px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 57%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 57%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 57%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 57%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20%;
+    }
+
+}
+
+@media (max-width: 1500px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 50%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 59%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 18%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 50%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 59%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 18%;
+    }
+
+}
+
+@media (max-width: 1400px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 57%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 61%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 57%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 61%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+    }
+
+}
+
+@media (max-width: 1300px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 55%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 64%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 13%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 55%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 64%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 13%;
+    }
+
+}
+
+@media (max-width: 1200px) {
+    .HotelSelectionHome-Container-Body-Cards-1-Subject {
+        width: 48%;
+        height: 100%;
+        position: relative; 
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img {
+        width: 70%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 10%;
+    }
+
+    
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-span {
+        width: auto;
+        height: auto;
+        z-index: 2;
+        position: absolute;
+        bottom: 10px; 
+        left: 5px; 
+        background: rgba(0, 0, 0, 0.5); 
+        color: white; 
+        padding: 5px; 
+        border-radius: 5px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        width: 48%;
+        height: 100%;
+        position: relative; 
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img {
+        width: 70%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 10%;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-span {
+        width: auto;
+        height: auto;
+        z-index: 2;
+        position: absolute;
+        bottom: 10px; 
+        left: 5px; 
+        background: rgba(0, 0, 0, 0.5); 
+        color: white; 
+        padding: 5px; 
+        border-radius: 5px;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    .HotelSelectionHome {
+        width: 100%;
+        height: 1150px;
+    }
+    
+    .HotelSelectionHome-Container {
+        width: 100%;
+        height: 1100px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards {
+        width: 100%;
+        height: 1050px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        opacity: 0; /* Başlangıçta görünmez */
+        transition: opacity 1s ease; /* Animasyon süresi ve yumuşak geçiş belirlendi */
+    }
+
+    .HotelSelectionHome-Container-Body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1 {
+        margin-top: 100px;
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1,
+    .HotelSelectionHome-Container-Body-Cards-2 {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-bottom: 120px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img img,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img img {
+        width: 100%;
+        height: auto;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-span,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-span {
+        margin-top: 10px;
+        text-align: center;
+    }
+}
+
+
+@media (max-width: 900px) {
+    .HotelSelectionHome-Container-Div-h1 {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .HotelSelectionHome-Container-h1 {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .HotelSelectionHome {
+        width: 100%;
+        height: 1150px;
+    }
+    
+    .HotelSelectionHome-Container {
+        width: 100%;
+        height: 1100px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards {
+        width: 100%;
+        height: 1050px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        opacity: 0; /* Başlangıçta görünmez */
+        transition: opacity 1s ease; /* Animasyon süresi ve yumuşak geçiş belirlendi */
+    }
+
+    .HotelSelectionHome-Container-Body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1 {
+        margin-top: 100px;
+    }
+    
+    .HotelSelectionHome-Container-Body-Cards-1,
+    .HotelSelectionHome-Container-Body-Cards-2 {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-bottom: 150px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-img img,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-img img {
+        width: 100%;
+        height: auto;
+    }
+
+    .HotelSelectionHome-Container-Body-Cards-1-Subject-Div-span,
+    .HotelSelectionHome-Container-Body-Cards-2-Subject-Div-span {
+        margin-top: 10px;
+        text-align: center;
+        font-size: 10px;
+    }
+
+}
+
+@media (max-width: 600px){
+
+
+}
+
+@media (max-width: 500px){
+
+
+}
+
+@media (max-width: 400px){
+
+
 }
