--- a/pages/styles/stylesComponents/WhyHoli.css
+++ b/pages/styles/stylesComponents/WhyHoli.css
@@ -63,3 +63,291 @@
     margin-bottom: 20px;
     margin-left: 15px;
 }
+
+@media (max-width: 1700px) {
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 20px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 1300px) {
+    .whyholi-Container-Div-img {
+        width: 35%;
+        height: 900px;
+    }
+
+    .whyholi-Container-Content {
+        width: 65%;
+        height: 900px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 17px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 1000px) {
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 16px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 900px) {
+    .whyholi-Container-Div-img {
+        width: 45%;
+        height: 900px;
+    }
+
+    .whyholi-Container-Content {
+        width: 55%;
+        height: 900px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 12px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 600px){
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 10px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 500px){
+    .whyholi-Container-Div-img {
+        width: 40%;
+        height: 900px;
+    }
+
+    .whyholi-Container-Content {
+        width: 60%;
+        height: 900px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 10px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+}
+
+@media (max-width: 400px){
+
+    .whyholi {
+        width: 100%;
+        height: 700px;
+    }
+
+    .whyholi-Container {
+        width: 100%;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .whyholi-Container-Content {
+        width: 100%;
+        height: 600px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-Content-h3 {
+        text-align: center;
+        color: black;
+        font-size: 12px;
+    }
+
+    .whyholi-Container-Div-ul {
+        width: 100%;
+        height: 630px;
+    }
+
+    .whyholi-Container-ul {
+        width: 80%;
+        height: 100%;
+        list-style: none;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        padding-left: 30px;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 8px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+    .remove-on-small {
+        display: none;
+    }
+
+}
+
+@media (max-width: 300px){
+
+    .whyholi {
+        width: 100%;
+        height: 700px;
+    }
+
+    .whyholi-Container {
+        width: 100%;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .whyholi-Container-Content {
+        width: 100%;
+        height: 600px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-Content-Div-h3 {
+        width: 100%;
+        height: 40px;
+        padding-top: 5px;
+    }
+
+    .whyholi-Container-Content-h3 {
+        text-align: center;
+        color: black;
+        font-size: 11px;
+    }
+
+    .whyholi-Container-Div-ul {
+        width: 100%;
+        height: 630px;
+    }
+
+    .whyholi-Container-ul {
+        width: 80%;
+        height: 100%;
+        list-style: none;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        padding-left: 30px;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 7px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+    .remove-on-small {
+        display: none;
+    }
+
+}
+
+@media (max-width: 300px){
+
+    .whyholi {
+        width: 100%;
+        height: 700px;
+    }
+
+    .whyholi-Container {
+        width: 100%;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .whyholi-Container-Content {
+        width: 100%;
+        height: 600px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6f4fa;
+    }
+
+    .whyholi-Container-Content-Div-h3 {
+        width: 100%;
+        height: 30px;
+        padding-top: 5px;
+    }
+
+    .whyholi-Container-Content-h3 {
+        text-align: center;
+        color: black;
+        font-size: 10px;
+    }
+
+    .whyholi-Container-Div-ul {
+        width: 100%;
+        height: 630px;
+    }
+
+    .whyholi-Container-ul {
+        width: 80%;
+        height: 100%;
+        list-style: none;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        padding-left: 30px;
+    }
+
+    .whyholi-Container-ul-li {
+        text-align: left;
+        font-size: 6px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+    .remove-on-small {
+        display: none;
+    }
+
+}
